--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only ./src/app.ts",
-    "build": "npx tsc"
+    "build": "npx tsc",
+    "test": "jest -i"
   },
   "keywords": [],
   "author": "",
@@ -24,7 +25,9 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@jest/globals": "^29.6.2",
     "@types/bcrypt": "^5.0.0",
+    "@types/jest": "^29.5.3",
     "@types/node": "^20.4.5",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
@@ -33,8 +36,10 @@
     "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.6.2",
     "prettier": "^3.0.0",
     "prisma": "^5.0.0",
+    "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   }
