--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "fastify": "^4.21.0",
+    "ua-parser-js": "^1.0.36",
     "winston": "^3.10.0",
     "zod": "^3.21.4"
   },
@@ -31,6 +32,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.5",
+    "@types/ua-parser-js": "^0.7.37",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "eslint": "^8.46.0",
