--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
     "prefer-default-export": "off",
     "no-shadow": "off",
     "import/prefer-default-export": "off",
-    "camelcase": "off"
+    "camelcase": "off",
+    "no-param-reassign": "off"
   }
 }
